Fixed nav bar and wrapped the events with anchor tag

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,13 @@ code {
   margin-left: auto;
   margin-right: auto;
   max-width: 450px;
+  text-decoration: none;
+  color: #464646;
+}
+
+.event-container:hover{
+  color: black;
+  text-decoration: none;
 }
 
 .event-container .event-img-wrap {
@@ -69,4 +76,30 @@ button p{
   font-size: 1.5rem;
   font-weight: 600;
   margin-bottom: 0px;
+}
+.nav-bar-content{
+  margin-top:10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 100px;
+}
+nav li{
+  list-style:none;
+  margin: 0;
+  padding: 0;
+  width:75px;
+  display: inline-block;
+}
+.header-left{
+  float:left;
+  padding: 0;
+  margin: 0;
+}
+.header-left h1{
+  width:205px;
+  position: relative;
+}
+
+.header-right{
+  float:right;
 }
